<resources>
    <string name="app_name">파이어베이스 시작</string>
    <string name="firebase_auth">파이어베이스 인증</string>
    <string name="firebase_readdb">파이어베이스 리얼타임디비</string>
    <string name="insert_auth_solution">삽입형 인증 솔루션</string>
    <string name="android_image">안드로이드 그림</string>
    <string name="auth">인증</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="email">Email</string>
    <string name="firestore">파이어베이스 파이어스토어</string>
    <string name="add_data">데이터 추가</string>
    <string name="set_data">데이터 추가(set)</string>
    <string name="deletedoc">데이터 삭제(문서)</string>
    <string name="deletefield">데이터 삭제(필드)</string>
    <string name="select_data">데이터 조회(문서)</string>
    <string name="select_where_data">데이터 조회(문서 - where)</string>
    <string name="listener_data">데이터 조회(실시간 업데이트)</string>
    <string name="listener_query_data">데이터조회(실시간업데이트-쿼리)</string>
    <string name="file_delete">파일 삭제하기</string>
    <string name="use_metadata">메타 데이터 사용하기</string>
    <string name="file_download">파일 다운로드</string>
    <string name="file_upload">파일 업로드</string>
    <string name="cloudstorage">파이어베이스 클라우드스토리지</string>
    <string name="downloadfiles">downloadFiles</string>
    <string name="download_from_local">로컬 파일로 다운로드</string>
    <string name="download_by_firebaseui">FirebaseUI로 이미지 다운로드</string>
    <string name="blank">-</string>
    <string name="get_metadata">메타 데이터 가져오기</string>
</resources>