<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firestore.FirestoreActivity">

    <Button
        android:id="@+id/adddatabtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_data"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/setdatabtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/setdatabtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_data"
        app:layout_constraintTop_toBottomOf="@id/adddatabtn"
        app:layout_constraintBottom_toTopOf="@id/deletedocbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/deletedocbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deletedoc"
        app:layout_constraintTop_toBottomOf="@id/setdatabtn"
        app:layout_constraintBottom_toTopOf="@id/deletefieldbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/deletefieldbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deletefield"
        app:layout_constraintTop_toBottomOf="@id/deletedocbtn"
        app:layout_constraintBottom_toTopOf="@id/select_data_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/select_data_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_data"
        app:layout_constraintTop_toBottomOf="@id/deletefieldbtn"
        app:layout_constraintBottom_toTopOf="@id/select_where_data_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/select_where_data_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_where_data"
        app:layout_constraintTop_toBottomOf="@id/select_data_btn"
        app:layout_constraintBottom_toTopOf="@id/listener_data_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/listener_data_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listener_data"
        app:layout_constraintTop_toBottomOf="@id/select_where_data_btn"
        app:layout_constraintBottom_toBottomOf="@id/listener_query_data_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/listener_query_data_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listener_query_data"
        app:layout_constraintTop_toBottomOf="@id/listener_data_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>